--- a/.github/workflows/e2e-flow-tests.yml
+++ b/.github/workflows/e2e-flow-tests.yml
@@ -1,7 +1,7 @@
 name: E2E Tests
 on:
   push:
-    branches: [ main ]
+    branches: [ main, pierremtb/separate-snapshot-from-flow-tests ]
   pull_request:
     branches: [ main ]
 
@@ -47,23 +47,29 @@ jobs:
     needs: check-rust-changes
     steps:
     - uses: actions/checkout@v4
+
     - uses: actions/setup-node@v4
       with:
         node-version-file: '.nvmrc'
         cache: 'yarn'
+
     - uses: KittyCAD/action-install-cli@main
+
     - name: Install dependencies
       shell: bash
       run: yarn
+
     - name: Cache Playwright Browsers
       uses: actions/cache@v4
       with:
         path: |
           ~/.cache/ms-playwright/
         key: ${{ runner.os }}-playwright-${{ hashFiles('yarn.lock') }}
+
     - name: Install Playwright Browsers
       shell: bash
       run: yarn playwright install --with-deps
+
     - name: Download Wasm Cache
       id: download-wasm
       if: needs.check-rust-changes.outputs.rust-changed == 'false'
@@ -75,29 +81,35 @@ jobs:
         workflow: build-and-store-wasm.yml
         branch: main
         path: src/wasm-lib/pkg
+
     - name: copy wasm blob
       if: needs.check-rust-changes.outputs.rust-changed == 'false'
       shell: bash
       run: cp src/wasm-lib/pkg/wasm_lib_bg.wasm public
       continue-on-error: true
+
     - name: Setup Rust
       uses: dtolnay/rust-toolchain@stable
+
     - name: Cache Wasm (because rust diff)
       if: needs.check-rust-changes.outputs.rust-changed == 'true'
       uses: Swatinem/rust-cache@v2
       with:
         workspaces: './src/wasm-lib'
+
     - name: OR Cache Wasm (because wasm cache failed)
       if: steps.download-wasm.outcome == 'failure'
       uses: Swatinem/rust-cache@v2
       with:
         workspaces: './src/wasm-lib'
+
     - name: install good sed
       if:  ${{ startsWith(matrix.os, 'macos') }}
       shell: bash
       run: |
         brew install gnu-sed
         echo "/opt/homebrew/opt/gnu-sed/libexec/gnubin" >> $GITHUB_PATH
+
     - name: Install vector
       shell: bash
       # TODO: figure out what to do with this, it's failing
@@ -115,73 +127,33 @@ jobs:
         sed -i "s#GH_ACTIONS_AXIOM_TOKEN#${{secrets.GH_ACTIONS_AXIOM_TOKEN}}#g" /tmp/vector.toml
         cat /tmp/vector.toml
         ${HOME}/.vector/bin/vector --config /tmp/vector.toml &
+
     - name: Build Wasm (because rust diff)
       if: needs.check-rust-changes.outputs.rust-changed == 'true'
       shell: bash
       run: yarn build:wasm
+
     - name: OR Build Wasm (because wasm cache failed)
       if: steps.download-wasm.outcome == 'failure'
       shell: bash
       run: yarn build:wasm
+
     - name: build web
       shell: bash
       run: yarn tronb:vite:dev
-    - name: Run ubuntu/chrome snapshots
-      if: ${{ matrix.os == 'namespace-profile-ubuntu-8-cores' && matrix.shardIndex == 1 }}
-      shell: bash
-      # TODO: break this in its own job, for now it's not slowing down the overall execution as ubuntu is the quickest,
-      # but we could do better. This forces a large 1/1 shard of all 20 snapshot tests that runs in about 3 minutes.
-      run: |
-        PLATFORM=web yarn playwright test --config=playwright.config.ts --retries="3" --update-snapshots --grep=@snapshot  --shard=1/1
-      env:
-        CI: true
-        NODE_ENV: development
-        VITE_KC_DEV_TOKEN: ${{ secrets.KITTYCAD_API_TOKEN_DEV }}
-        VITE_KC_SKIP_AUTH: true
-        token: ${{ secrets.KITTYCAD_API_TOKEN_DEV }}
-        snapshottoken: ${{ secrets.KITTYCAD_API_TOKEN }}
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() && (success() || failure()) }}
-      with:
-        name: playwright-report-${{ matrix.os }}-snapshot-${{ matrix.shardIndex }}-${{ github.sha }}
-        path: playwright-report/
-        include-hidden-files: true
-        retention-days: 30
-        overwrite: true
+
     - name: Clean up test-results
       if: ${{ !cancelled() && (success() || failure()) }}
       continue-on-error: true
       run: rm -r test-results
-    - name: check for changes
-      if: ${{ matrix.os == 'namespace-profile-ubuntu-8-cores' && matrix.shardIndex == 1 }}
-      shell: bash
-      id: git-check
-      run: |
-          git add e2e/playwright/snapshot-tests.spec.ts-snapshots
-          if git status | grep -q "Changes to be committed"
-          then echo "modified=true" >> $GITHUB_OUTPUT
-          else echo "modified=false" >> $GITHUB_OUTPUT
-          fi
-    # only upload artifacts if there's actually changes
-    - name: Upload changes, if any
-      if: steps.git-check.outputs.modified == 'true'
-      uses: actions/upload-artifact@v4
-      with:
-        name: playwright-snapshots-${{ matrix.os }}-${{ github.sha }}
-        path: e2e/playwright/snapshot-tests.spec.ts-snapshots
-    - uses: actions/upload-artifact@v4
-      if: steps.git-check.outputs.modified == 'true'
-      with:
-        name: playwright-report-${{ matrix.os }}-${{ github.sha }}
-        path: playwright-report/
-        include-hidden-files: true
-        retention-days: 30
+
     - uses: actions/download-artifact@v4
       if: ${{ !cancelled() && (success() || failure()) }}
       continue-on-error: true
       with:
         name: test-results-${{ matrix.os }}-${{ matrix.shardIndex }}-${{ github.sha }}
         path: test-results/
+
     - name: Run playwright/electron flow (with retries)
       id: retry
       if: ${{ !cancelled() && (success() || failure()) }}
@@ -195,6 +167,7 @@ jobs:
         VITE_KC_DEV_TOKEN: ${{ secrets.KITTYCAD_API_TOKEN_DEV }}
         VITE_KC_SKIP_AUTH: true
         token: ${{ secrets.KITTYCAD_API_TOKEN_DEV }}
+
     - uses: actions/upload-artifact@v4
       if: always()
       with:
@@ -203,6 +176,7 @@ jobs:
         include-hidden-files: true
         retention-days: 30
         overwrite: true
+
     - uses: actions/upload-artifact@v4
       if: always()
       with:
@@ -211,4 +185,3 @@ jobs:
         include-hidden-files: true
         retention-days: 30
         overwrite: true
-
