--- a/.github/workflows/e2e-flow-tests.yml
+++ b/.github/workflows/e2e-flow-tests.yml
@@ -1,7 +1,7 @@
-name: E2E Tests
+name: E2E Flow Tests
 on:
   push:
-    branches: [ main, pierremtb/separate-snapshot-from-flow-tests ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
