--- a/.github/workflows/e2e-flow-tests.yml
+++ b/.github/workflows/e2e-flow-tests.yml
@@ -33,7 +33,7 @@ jobs:
             rust:
               - 'src/wasm-lib/**'
 
-  electron-tests:
+  flow-tests:
     timeout-minutes: 60
     name: playwright:electron:${{ matrix.os }} ${{ matrix.shardIndex }} ${{ matrix.shardTotal }}
     strategy:
