--- a/package.json
+++ b/package.json
@@ -215,6 +215,7 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.48.1",
     "vite": "^7.3.1",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vite-plugin-package-version": "^1.1.0",
     "vite-plugin-top-level-await": "^1.5.0",
     "vite-tsconfig-paths": "^4.3.2",
