--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -21,6 +21,8 @@ permissions:
 
 jobs:
   prepare-wasm:
+    # TODO: Most of these steps are identical to those in 'build-wasm.yml', so
+    # we should consider calling that reusable workflow instead.
     runs-on: namespace-profile-ubuntu-8-cores
     steps:
       - uses: actions/checkout@v6
@@ -68,8 +70,8 @@ jobs:
 
       - uses: actions/setup-node@v6
         with:
-          node-version-file: ".nvmrc"
-          cache: "npm"
+          node-version-file: .nvmrc
+          cache: npm
 
       - name: Install dependencies
         run: npm install
@@ -90,7 +92,7 @@ jobs:
         id: wasm
         run: |
           set -euox pipefail
-          # Build wasm if this is a scheduled run, there are Rust changes, or
+          # Build Wasm if this is a scheduled run, there are Rust changes, or
           # downloading from the wasm cache failed.
           if [[ ${{github.event_name}} == 'schedule' || ${{steps.filter.outputs.rust || 'false'}} == 'true' || ${{steps.download-wasm.outcome}} == 'failure' ]]; then
             echo "should-build-wasm=true" >> $GITHUB_OUTPUT
@@ -108,8 +110,8 @@ jobs:
         if: ${{ steps.wasm.outputs.should-build-wasm == 'true' }}
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          cache: false # Configured below.
-          rustflags: '' # Use .cargo/config.toml
+          cache: false # configured below
+          rustflags: '' # use .cargo/config.toml
 
       - uses: taiki-e/install-action@493d7f216ecab2af0602481ce809ab2c72836fa1
         if: ${{ steps.wasm.outputs.should-build-wasm == 'true' }}
@@ -127,8 +129,7 @@ jobs:
         shell: bash
         run: npm run build:wasm
 
-      - name: Upload compiled wasm artifacts
-        uses: actions/upload-artifact@v6
+      - uses: actions/upload-artifact@v6
         with:
           name: prepared-wasm
           path: |
@@ -167,8 +168,8 @@ jobs:
 
       - uses: actions/setup-node@v6
         with:
-          node-version-file: ".nvmrc"
-          cache: "npm"
+          node-version-file: .nvmrc
+          cache: npm
 
       - name: Install dependencies
         run: npm install
@@ -300,8 +301,8 @@ jobs:
 
       - uses: actions/setup-node@v6
         with:
-          node-version-file: ".nvmrc"
-          cache: "npm"
+          node-version-file: .nvmrc
+          cache: npm
 
       - name: Install dependencies
         run: npm install
@@ -427,8 +428,8 @@ jobs:
 
       - uses: actions/setup-node@v6
         with:
-          node-version-file: ".nvmrc"
-          cache: "npm"
+          node-version-file: .nvmrc
+          cache: npm
 
       - name: Install dependencies
         id: deps-install
