--- a/.github/workflows/build-and-store-wasm.yml
+++ b/.github/workflows/build-and-store-wasm.yml
@@ -1,4 +1,4 @@
-name: Build and Store WASM
+name: Build and Store Wasm
 
 on:
   push:
@@ -12,8 +12,8 @@ jobs:
       - uses: actions/checkout@v6
       - uses: actions/setup-node@v6
         with:
-          node-version-file: '.nvmrc'
-          cache: 'npm'
+          node-version-file: .nvmrc
+          cache: npm
       - name: Install dependencies
         run: npm install
       - name: Use correct Rust toolchain
@@ -36,7 +36,7 @@ jobs:
         run: npm run build:wasm
 
 
-      # Upload the WASM bundle as an artifact
+      # Upload the Wasm bundle as an artifact
       - uses: actions/upload-artifact@v6
         with:
           name: wasm-bundle
