--- a/.github/workflows/generate-machine-api-types.yml
+++ b/.github/workflows/generate-machine-api-types.yml
@@ -20,8 +20,8 @@ jobs:
       - uses: actions/checkout@v6
       - uses: actions/setup-node@v6
         with:
-          node-version-file: '.nvmrc'
-          cache: 'npm'
+          node-version-file: .nvmrc
+          cache: npm
       - run: npm install
       - run: npm run generate:machine-api
       - run: npm run fmt || true
