--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "three": "^0.182.0",
     "ua-parser-js": "^1.0.37",
     "uuid": "^11.1.0",
+    "vite-plugin-node-polyfills": "^0.25.0",
     "vscode-jsonrpc": "^8.2.1",
     "vscode-languageserver-protocol": "^3.17.5",
     "vscode-uri": "^3.1.0",
@@ -161,7 +162,7 @@
     "@iarna/toml": "^2.2.5",
     "@lezer/generator": "^1.7.3",
     "@nabla/vite-plugin-eslint": "^2.0.6",
-    "@playwright/test": "1.56.1",
+    "@playwright/test": "^1.57.0",
     "@preact/signals-react-transform": "^0.6.0",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^15.0.7",
@@ -215,7 +216,6 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.48.1",
     "vite": "^7.3.1",
-    "vite-plugin-node-polyfills": "^0.24.0",
     "vite-plugin-package-version": "^1.1.0",
     "vite-plugin-top-level-await": "^1.5.0",
     "vite-tsconfig-paths": "^4.3.2",
