--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -33,7 +33,7 @@ jobs:
           CI_SUITE: integration
           CI_STEP: setup
 
-  npm-build-wasm:
+  build-wasm:
     needs: [track-setup]
     uses: ./.github/workflows/build-wasm.yml
     secrets:
@@ -71,7 +71,7 @@ jobs:
 
   npm-test-integration:
     runs-on: namespace-profile-ubuntu-2-cores
-    needs: npm-build-wasm
+    needs: build-wasm
     steps:
       - uses: actions/checkout@v6
 
