--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - pierremtb/revert-9716-but-keep-the-minimal-intent
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
 
