--- a/.github/workflows/build-wasm.yml
+++ b/.github/workflows/build-wasm.yml
@@ -56,6 +56,7 @@ jobs:
           else
             echo "should-build-wasm=false" >> $GITHUB_OUTPUT
           fi
+          echo "should-build-wasm=true" >> $GITHUB_OUTPUT
 
       - name: Use correct Rust toolchain
         if: ${{ steps.wasm.outputs.should-build-wasm == 'true' }}
