--- a/.github/workflows/build-wasm.yml
+++ b/.github/workflows/build-wasm.yml
@@ -49,9 +49,11 @@ jobs:
       - name: Build Wasm condition
         id: wasm
         run: |
-          set -euox pipefail
-          # Build Wasm if there are Rust changes or downloading from the cache failed
-          if [[ ${{steps.filter.outputs.rust || 'false'}} == 'true' || ${{steps.download-wasm.outcome}} == 'failure' ]]; then
+          # Build Wasm with Rust changes, cache misses, or for stacked PRs
+          BASE_REF="${{ github.event.pull_request.base.ref }}"
+          if [[ ${{ steps.filter.outputs.rust || 'false' }} == 'true' || \
+                ${{ steps.download-wasm.outcome }} == 'failure' || \
+                ( -n "$BASE_REF" && "$BASE_REF" != 'main' ) ]]; then
             echo "should-build-wasm=true" >> $GITHUB_OUTPUT
           else
             echo "should-build-wasm=false" >> $GITHUB_OUTPUT
