Change just commands to aggressively overwrite sim test PNG images

--- a/.github/workflows/cargo-test.yml
+++ b/.github/workflows/cargo-test.yml
@@ -111,7 +111,7 @@ jobs:
         run: |
           set -euo pipefail
           pushd rust
-          just overwrite-sim-test kcl_samples
+          just update-sim-test kcl_samples
           popd
           git add \
             rust/kcl-lib/tests \
