Set dummy release version in case of force release build

--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -111,6 +111,13 @@ jobs:
           export VERSION=${GITHUB_REF_NAME#v}
           npm run files:set-version
 
+      - name: Set dummy release version (forced release build) and disable updater
+        if: ${{ env.FORCE_RELEASE_BUILD == 'true' }}
+        run: |
+          export VERSION=255.255.0
+          npm run files:set-version
+          yq -i '.publish[0].url = "https://dl.zoo.dev/releases/design-studio/no-update"' electron-builder.yml
+
       - name: Set windows codesign config
         if: ${{ env.IS_RELEASE == 'true' || env.FORCE_RELEASE_BUILD == 'true' }}
         env:
