--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -164,17 +164,22 @@ jobs:
       - name: Commit changes
         if: ${{ always() && steps.git-check.outputs.modified == 'true' }}
         shell: bash
+        env:
+          GITHUB_ACTOR: ${{ github.actor }}
+          GITHUB_HEAD_REF: ${{ github.head_ref }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git add e2e/playwright/snapshot-tests.spec.ts-snapshots e2e/playwright/snapshots
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+          git remote set-url origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           git fetch origin
-          echo ${{ github.head_ref }}
-          git checkout ${{ github.head_ref }}
+          echo "${GITHUB_HEAD_REF}"
+          git checkout "${GITHUB_HEAD_REF}"
           git commit --message "Update snapshots" || true
           git push
-          git push origin ${{ github.head_ref }}
+          git push origin "${GITHUB_HEAD_REF}"
 
       - name: Track teardown (snapshots)
         if: always()
