--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -155,7 +155,7 @@ jobs:
             platform: macos
           - os: namespace-profile-windows-4-cores
             platform: windows
-          - os: ubuntu-22.04
+          - os: namespace-profile-ubuntu-2-cores
             platform: linux
     runs-on: ${{ matrix.os }}
     name: build-apps (${{ matrix.platform }})
