--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -84,6 +84,6 @@ insta = { opt-level = 3 }
 debug = "line-tables-only"
 
 #Example: how to point modeling-app at a different repo (e.g. a branch or a local clone)
-# [patch.crates-io]
-# kittycad-modeling-cmds = { git = "https://github.com/KittyCAD/modeling-api.git", branch = "ben/surface_loft" }
+[patch.crates-io]
+kittycad-modeling-cmds = { git = "https://github.com/KittyCAD/modeling-api.git", branch = "achalmers/more-builders" }
 # kittycad-modeling-cmds = { path = "../../modeling-api/modeling-cmds" }
