--- a/rust/kcl-wasm-lib/Cargo.toml
+++ b/rust/kcl-wasm-lib/Cargo.toml
@@ -15,7 +15,9 @@ bench = false
 dhat-heap = ["kcl-lib/dhat-heap"]
 
 [dependencies]
+kcl-lib = { path = "../kcl-lib", features = ["artifact-graph"] }
 rayon = { workspace = true }
+serde_json = { workspace = true }
 typed-path = "0.12.1"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
@@ -31,6 +33,7 @@ js-sys = "0.3.72"
 kcl-lib = { path = "../kcl-lib", features = ["artifact-graph"] }
 kittycad = { workspace = true }
 kittycad-modeling-cmds = { workspace = true }
+serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["sync", "rt"] }
 toml = "0.9.11"
