--- a/rust/kcl-python-bindings/justfile
+++ b/rust/kcl-python-bindings/justfile
@@ -1,6 +1,7 @@
 test:
     uv pip install .[test]
-    uv run pytest tests/tests.py
+    mkdir -p test-results
+    uv run pytest tests/tests.py --junitxml=test-results/junit.xml
 
 test-filter name:
     uv pip install .[test]
