Fetch dependencies during setup

--- a/rust/kcl-python-bindings/justfile
+++ b/rust/kcl-python-bindings/justfile
@@ -36,6 +36,7 @@ setup-uv:
     uv venv .venv
     echo "VIRTUAL_ENV=.venv" >> $GITHUB_ENV
     echo "$PWD/.venv/bin" >> $GITHUB_PATH
+    uv pip install .[test]
 
 lint:
     uv run ruff check
