Suggest a pipe expression after an expression and whitespace

--- a/packages/codemirror-lsp-client/tsconfig.json
+++ b/packages/codemirror-lsp-client/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "commonjs",
+    "types": ["node"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
