Run the KCL integration tests every hour for flake analysis

--- a/.github/workflows/kcl-python-bindings.yml
+++ b/.github/workflows/kcl-python-bindings.yml
@@ -21,6 +21,8 @@ on:
       - '**.rs'
       - .github/workflows/kcl-python-bindings.yml
   workflow_dispatch:
+  schedule:
+    - cron: 0 * * * * # hourly
 permissions:
   contents: read
 concurrency:
