--- a/rust/kcl-error/Cargo.toml
+++ b/rust/kcl-error/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.126"
 edition = "2024"
 description = "KCL error definitions"
 license = "MIT"
+repository = "https://github.com/KittyCAD/modeling-app"
 
 [dependencies]
 miette = { workspace = true }
