--- a/rust/kcl-test-server/Cargo.toml
+++ b/rust/kcl-test-server/Cargo.toml
@@ -4,6 +4,7 @@ description = "A test server for KCL"
 version = "0.1.126"
 edition = "2021"
 license = "MIT"
+repository = "https://github.com/KittyCAD/modeling-app"
 
 [lib]
 bench = false
